# -*- mode: python -*-
# vi: set ft=python :

load(
    "//tools/skylark:cuda.bzl",
    "nvcc_library",
)

load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
)


nvcc_library(
    name = "cuda_cholesky",
    hdrs = ["cuda_cholesky.h", "cuda_cholesky.cuh"],
    srcs = ["cuda_cholesky.cu"],
    deps = [
        "//common:essential",
    ],
)

nvcc_library(
    name = "cuda_gpu_collision",
    hdrs = ["cuda_gpu_collision.h", "cuda_gpu_collision.cuh"],
    srcs = ["cuda_gpu_collision.cu"],
    deps = [
        "//common:essential",
    ],
)

nvcc_library(
    name = "cuda_onestepsap",
    hdrs = ["cuda_onestepsap.h", "cuda_cholesky.h","cuda_onestepsap.cuh", "cuda_cholesky.cuh", "cuda_gpu_collision.h", "cuda_gpu_collision.cuh"],
    srcs = ["cuda_onestepsap.cu"],
    deps = [
        "//common:essential",
        ":cuda_cholesky",
        ":cuda_gpu_collision",
    ],
)

nvcc_library(
    name = "cuda_onestepsap_vd",
    hdrs = ["cuda_onestepsap_vd.h", "cuda_cholesky.h","cuda_onestepsap_vd.cuh", "cuda_cholesky.cuh"],
    srcs = ["cuda_onestepsap_vd.cu"],
    deps = [
        "//common:essential",
        ":cuda_cholesky",
    ],
)

nvcc_library(
    name = "cuda_fullsolve",
    hdrs = ["cuda_fullsolve.h", "cuda_gpu_collision.cuh", "cuda_gpu_collision.h","cuda_onestepsap.cuh","cuda_onestepsap.h"],
    srcs = ["cuda_fullsolve.cu"],
    deps = [
        "//common:essential",
        ":cuda_gpu_collision",
        ":cuda_onestepsap",
        ":cuda_cholesky",
    ],
)

drake_cc_googletest(
    name = "cuda_cholesky_test",
    srcs = ["cuda_cholesky_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
        ":cuda_cholesky",
        "@gtest//:main",
    ],
)

drake_cc_googletest(
    name = "cuda_gpu_collision_test",
    srcs = ["cuda_gpu_collision_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
        ":cuda_gpu_collision",
        "@gtest//:main",
    ],
)


drake_cc_googletest(
    name = "cuda_onestepsap_test",
    srcs = ["cuda_onestepsap_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
    ":cuda_onestepsap",
    ":cuda_cholesky",
    "@gtest//:main",
    "@cuda//:cudart",
    ],
)

drake_cc_googletest(
    name = "cuda_fullsolve_test",
    srcs = ["cuda_fullsolve_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
    ":cuda_onestepsap",
    ":cuda_cholesky",
    ":cuda_gpu_collision",
    ":cuda_fullsolve",
    "@gtest//:main",
    "@cuda//:cudart",
    ],
)


